--- a/jason-parent/pom.xml
+++ b/jason-parent/pom.xml
@@ -1,9 +1,9 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jason</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>3.3</version>
+	<version>3.5</version>
 	<packaging>pom</packaging>
 
 	<description>Jason POM</description>
@@ -159,6 +159,12 @@
 				<version>${log4j2.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j2.version}</version>
+			</dependency>
+
 
 			<!-- MySQL, Hibernate -->
 			<dependency>
@@ -240,12 +246,18 @@
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>htmlunit-driver</artifactId>
-				<version>2.38.0</version>
+				<version>3.56.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>selenium-server</artifactId>
-				<version>3.141.59</version>
+				<version>4.0.0-alpha-2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.seleniumhq.selenium</groupId>
+				<artifactId>selenium-java</artifactId>
+				<version>4.0.0</version>
 			</dependency>
 
 			<!-- Test - JUnit 5, Mockito -->
