--- a/jason-product/dictionary-update-aws/pom.xml
+++ b/jason-product/dictionary-update-aws/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>dictionary-update-aws</artifactId>
-	<version>1.0.0</version>
+	<version>2.1.0</version>
 
 	<build>
 		<plugins>
@@ -54,7 +54,7 @@
 			<dependency>
 				<groupId>org.jason</groupId>
 				<artifactId>parent-pom</artifactId>
-				<version>3.3</version>
+				<version>3.5</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -80,6 +80,11 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-sqs</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>htmlunit-driver</artifactId>
@@ -92,6 +97,10 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 		</dependency>
+		<dependency>
+           <groupId>org.apache.logging.log4j</groupId>
+           <artifactId>log4j-slf4j-impl</artifactId>
+       </dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
