--- a/jason-parent/pom.xml
+++ b/jason-parent/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>3.5</version>
+	<version>3.7</version>
 	<packaging>pom</packaging>
 
 	<description>Jason POM</description>
@@ -45,6 +45,7 @@
 		<jsonb-api.version>1.1.4</jsonb-api.version>
 		<jsonb-glassfish-impl.version>1.1</jsonb-glassfish-impl.version>
 		<apache-commons-langs.version>3.12.0</apache-commons-langs.version>
+		<selenium.version>4.1.1</selenium.version>
 	</properties>
 
 	<build>
@@ -246,18 +247,56 @@
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>htmlunit-driver</artifactId>
-				<version>3.56.0</version>
+				<version>${selenium.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>selenium-server</artifactId>
-				<version>4.0.0-alpha-2</version>
+				<version>${selenium.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>selenium-java</artifactId>
-				<version>4.0.0</version>
+				<version>${selenium.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-firefox-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-firefox-xpi-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-ie-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-safari-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-edge-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-opera-driver</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-devtools-v85</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-devtools-v94</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.seleniumhq.selenium</groupId>
+						<artifactId>selenium-devtools-v95</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<!-- Test - JUnit 5, Mockito -->
