--- a/jason-parent/pom.xml
+++ b/jason-parent/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.jason</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>3.7</version>
+	<version>3.8</version>
 	<packaging>pom</packaging>
 
 	<description>Jason POM</description>
@@ -37,7 +37,7 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<project.version>3.3</project.version>
 		<powermock.version>1.4.10</powermock.version>
-		<springframework.version>5.2.5.RELEASE</springframework.version>
+		<springframework.version>5.3.14</springframework.version>
 		<junit-version>5.8.2</junit-version>
 		<log4j2.version>2.17.1</log4j2.version>
 		<springboot.version>2.2.5.RELEASE</springboot.version>
@@ -46,6 +46,7 @@
 		<jsonb-glassfish-impl.version>1.1</jsonb-glassfish-impl.version>
 		<apache-commons-langs.version>3.12.0</apache-commons-langs.version>
 		<selenium.version>4.1.1</selenium.version>
+		<selenium.server.version>4.0.0-alpha-2</selenium.server.version>
 	</properties>
 
 	<build>
@@ -67,16 +68,12 @@
 			</dependency>
 
 			<!-- JavaEE API -->
+			
+			<!-- JSON-P API -->
 			<dependency>
 				<groupId>javax.json</groupId>
 				<artifactId>javax.json-api</artifactId>
 				<version>1.1.4</version>
-			</dependency>
-			<!-- Should be replaced by json-p -->
-			<dependency>
-				<groupId>org.jsoup</groupId>
-				<artifactId>jsoup</artifactId>
-				<version>1.11.3</version>
 			</dependency>
 			<dependency>
 				<groupId>org.glassfish</groupId>
@@ -84,6 +81,8 @@
 				<scope>runtime</scope>
 				<version>1.1</version>
 			</dependency>
+			
+			<!-- JSON-B API and Implementation -->
 			<dependency>
 				<groupId>javax.json.bind</groupId>
 				<artifactId>javax.json.bind-api</artifactId>
@@ -94,6 +93,19 @@
 				<artifactId>yasson</artifactId>
 				<scope>runtime</scope>
 				<version>1.0</version>
+			</dependency>
+			
+			<!-- Validation API and reference implementation -->
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>2.0.1.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate.validator</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>7.0.2.Final</version>
+				<scope>runtime</scope>
 			</dependency>
 
 			<!-- Apache Commons -->
@@ -122,7 +134,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.5.11</version>
+				<version>4.5.13</version>
 			</dependency>
 
 			<!-- Guava -->
@@ -252,7 +264,7 @@
 			<dependency>
 				<groupId>org.seleniumhq.selenium</groupId>
 				<artifactId>selenium-server</artifactId>
-				<version>${selenium.version}</version>
+				<version>${selenium.server.version}</version>
 			</dependency>
 
 			<dependency>
